0031835: Modeling Algorithms - step by step Boolean common produces bad shape on given three cylinders

Fix inconsistency between IntAna_QuadQuadGeo(gp_Cylinder,gp_Cylinder) and AxeOperator::Coplanar().